# aks

./: AksSystem.cpp  AksSystem.h  CMakeLists.txt  ObjectManager.cpp  ObjectManager.h  Simulators.cpp  Simulators.h  UdpSocket.cpp  UdpSocket.h  config.txt  defs.h  launcherwidget.cpp  launcherwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  missilewidget.cpp  missilewidget.h
